# qa_guru_python_6_diploma

./: README.md  pyproject.toml  requirements.txt
notifications/: config.json
tests/: conftest.py  test_books.py  test_comp.py  test_jewelry.py  test_registration.py  test_shop.py
tests_demo/: resourсe.py
tests_demo/pages/: add_book.py  add_jewelry_in_wishlist.py  check_cart.py  create_jewelry.py  pick_the_comp.py  pick_the_comp2.py  regisntation_with_created_user.py  registration.py  subscribe_for_news.py
tests_demo/users/: .env.data  users.py  values.py
utils/: allure_attach.py
